--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,4 +5,7 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
+      - targets: ['10.154.0.4:8080']
+        labels:
+          #group: 'web-application-server'
   # Add more scrape_configs as needed for your specific use case
